Fixed canvas resize issue
Now the canvas works even if the window is loaded small then expanded. Only issue left is the small amount of overlap on taller screens

--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ body {
   overflow-x: hidden;
 }
 
-#overlay {
-  position: relative;
+#container {
+  overflow: hidden;
 }
 
 canvas {
